--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h2>I'm a Web Developer</h2>
     <hr/>
     <h3> 
-    <a href=".\public\movie-ranking.html">Movie Ranking Project</a>
+        <a href=".\public\movie-ranking.html">Movie Ranking Project</a>
     </h3>
-    <img src=".\assets\images\Movie Ranking.jpg" alt="Movie Ranking" height="200"/>
+    <img src=".\assets\images\Movie Ranking.png" alt="Movie Ranking" height="200"/>
     <br />
     <h3>
-    <a href=".\public\birthday-invite.html">Birthday Invite Project</a>
+        <a href=".\public\birthday-invite.html">Birthday Invite Project</a>
     </h3>
-    <img src=".\assets\images\Captura.jpg" alt="Birthday Invite" height="200"/>
+    <img src=".\assets\images\Captura.png" alt="Birthday Invite" height="200"/>
     <hr/>
     <a href=".\public\about.html">About Me</a>
     <a href=".\public\contact.html">Contact Me</a>
